@@ -39,7 +39,7 @@ debian-rvm/smplayer-default.ex -text
 debian-rvm/smplayer.doc-base.EX -text
 debian-rvm/watch.ex -text
 docs/de/gpl.html -text
-docs/en/FAQ.txt -text
+docs/en/faq.html -text
 docs/en/gpl.html -text
 docs/es/gpl.html -text
 /get_svn_revision.sh -text
